# ZipSplat

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
splatfactory/: __init__.py  gaussians.py  pyproject.toml  requirements.txt  settings.py  train.py  trainer.py
splatfactory/configs/: zipsplat-4090.yaml  zipsplat.yaml  zipsplat_eval.yaml
splatfactory/configs/benchmarks/: re10k_dl3dv.yaml
splatfactory/configs/data/: composed_252.yaml  dl3dv.yaml  re10k.yaml
splatfactory/configs/model/: zipsplat.yaml
splatfactory/configs/train/: zipsplat.yaml
splatfactory/datasets/: __init__.py  augmentations.py  base_dataset.py  composed.py  dataset_dl3dv.py  dataset_mipnerf360.py  dataset_re10k.py  multi_view_dataset.py
splatfactory/datasets/scripts/: extract_depth.py  repack.py  resize.py  utils.py
splatfactory/datasets/utils/: debug.py  io.py  workers.py
splatfactory/datasets/view_sampler/: __init__.py  base_sampler.py  (+4 more)
splatfactory/eval/: __init__.py  dl3dv_benchmark.py  eval_pipeline.py  io.py  mipnerf360_benchmark.py  multiview_benchmark.py  re10k_benchmark.py  run.py
splatfactory/geometry/: __init__.py  cameras.py  pose_estimator.py  poses.py  scale.py  utils.py
splatfactory/models/: base_model.py  cache_loader.py  losses.py  metrics.py  misc.py
splatfactory/utils/: conversions.py  distributed.py  experiments.py  export.py  image.py  mappings.py  metrics.py  stdout_capturing.py  summary_writer.py  tensor.py  tools.py  types.py
splatfactory/visualization/: visualize_batch.py  viz2d.py  viz3d.py  viz_video.py
(+36 files in other folders)
